check_PROGRAMS=test_swap test_inverse
test_swap_SOURCES=test_swap.c ../src/variant.h ../src/variant.c
test_inverse_SOURCES=test_inverse.c ../src/variant.h ../src/variant.c
dist_noinst_SCRIPTS=test_lock.sh test_analize.sh
dist_noinst_DATA=test_lock_dump_src.bin test_analize_dump.bin
TESTS=$(check_PROGRAMS) test_lock.sh test_analize.sh


